--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,80 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
-var socket = io.connect('http://localhost');
+;(function(){
+  /**
+   * 'Globals'
+   */
+  var socket = io.connect('http://localhost');
+  var history = [];
+  var user = {
+    color: 'green'
+  };
+  var nothing = function () {};
+  nothing.toString = function () { return ' '; };
 
-function defineCommand (name, fn) {
-  var type = ['get', 'set'];
-  var obj = {};
-  obj[type[fn.length]] = fn;
-  Object.defineProperty(window, name, obj);
-}
+  /**
+   * Command stuff
+   */
+  function defineCommand (name, fn) {
+    var type = ['get', 'set'];
+    var obj = {};
+    obj[type[fn.length]] = fn;
+    Object.defineProperty(window, name, obj);
+  }
 
-defineCommand('help', function(){
-  console.log('-         Help          -\n-------------------------\nhelp - show\'s this screen\nname - displays your username');
-});
+  defineCommand('help', function(){
+    console.log('-         Help          -\n-------------------------\nhelp - show\'s this screen');
+  });
 
-defineCommand('say', function(val){
-  console.log('say:', val);
-  return null
-})
+  defineCommand('whoami', function(){
+    console.log('Logged in as %c' + user.name, 'color:' + user.color);
+  });
 
-console.log('Welcome to the chat');
+  defineCommand('name', function (val) {
+    user.name = val;
+    showMsgs();
+  });
 
+  defineCommand('color', function (val) {
+    user.color = val;
+    showMsgs();
+  });
 
+  /*
+   * Msg handling
+   */
+  var getText = RegExp.prototype.toString;
+  RegExp.prototype.toString = function () {
+    var rawmsg = getText.call(this);
+    var msg = rawmsg.substring(1, rawmsg.length - 1);
+    sendMsg(msg);
+    return ' ';
+  }
 
+  socket.on('msg', function (msg) {
+    history.push(msg);
+    showMsgs();
+  });
 
+  function showMsgs () {
+    console.clear();
+    history.forEach(showMsg);
+  }
+
+  function sendMsg (msg) {
+    if (!user.name) {
+      console.log('Please define a username');
+    }
+    socket.emit('msg', {
+      user: user,
+      msg: msg
+    });
+  }
+
+  function showMsg (msg) {
+    console.log('%c[' + msg.user.name + ']: %c'+msg.msg, 'color:'+msg.user.color, 'color:grey');
+  }
+
+  console.log('Welcome to the chat');
+}());
 </script>
